<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/headbar"
            app:title="Очколоджик"
            app:layout_constraintTop_toTopOf="parent"/>

    <TableLayout
            android:id="@+id/infoTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/headbar"
            android:paddingLeft="6dp">


        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:id="@+id/textView_GPS_status_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/GPS_status_title"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:typeface="serif">
                    </TextView>
                    <TextView
                            android:id="@+id/textView_GPS_status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/status_Disabled"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:typeface="serif"
                            android:layout_marginLeft="6dp">
                    </TextView>
                </TableRow>

                <TableRow>
                    <TextView
                            android:id="@+id/textView_Date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/date_mask"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:typeface="serif">
                    </TextView>
                    <TextView
                            android:id="@+id/textView_Time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/time_mask"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:typeface="serif"
                            android:layout_marginLeft="6dp">
                    </TextView>
                </TableRow>

                <TableRow>
                    <TextView
                            android:id="@+id/textView_Speed_Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/speed_title"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:typeface="serif">
                    </TextView>
                    <TextView
                            android:id="@+id/textView_CurrentSpeed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/speed_mask"
                            android:gravity="center"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:typeface="serif">
                    </TextView>
                    <TextView
                            android:id="@+id/textView_Speed_Unit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/speed_unit"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:typeface="serif">
                    </TextView>
                </TableRow>

                <TableRow>
                    <TextView
                            android:id="@+id/textView_Timer_Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/timer_title"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:typeface="serif">
                    </TextView>
                    <TextView
                            android:id="@+id/textView_TimerCounter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/timer_mask"
                            android:gravity="center"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:typeface="serif">
                    </TextView>
                    <TextView
                            android:id="@+id/textView_Timer_Unit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/timer_unit"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:typeface="serif">
                    </TextView>
                </TableRow>
            </TableLayout>
            <Button
                    android:id="@+id/btn_ready_to_measure"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/btn_start_measure"
                    android:layout_marginLeft="12dp"
                    android:textStyle="bold"
                    android:layout_gravity="end"/>
        </TableRow>
    </TableLayout>
    <TableLayout
            android:id="@+id/result_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/infoTable"
            android:layout_marginTop="12dp"
            android:paddingLeft="6dp">

        <TableRow>
            <TextView
                    android:id="@+id/textView_results_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/results_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif">
            </TextView>
        </TableRow>

        <TableRow>
            <TextView
                    android:id="@+id/textView_date_column_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_column_title"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:typeface="serif">
            </TextView>
            <TextView
                    android:id="@+id/textView_time_column_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_column_title"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:typeface="serif">
            </TextView>
            <TextView
                    android:id="@+id/textView_time_result_column"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:text="@string/result_column_title"
                    android:textSize="16sp"
                    android:typeface="serif">
            </TextView>
        </TableRow>
        <TableRow>
            <TextView
                    android:id="@+id/textView_date_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_mask"
                    android:textSize="16sp"
                    android:typeface="serif">
            </TextView>
            <TextView
                    android:id="@+id/textView_time_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_mask"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:typeface="serif">
            </TextView>
            <TextView
                    android:id="@+id/textView_timer_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:gravity="center"
                    android:text="@string/timer_mask"
                    android:textSize="16sp"
                    android:typeface="serif">
            </TextView>
        </TableRow>
    </TableLayout>


    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/result_table"
            android:layout_marginTop="12dp"
            android:paddingLeft="6dp">
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/textView_currentCoord_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/currentCoord_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif">
            </TextView>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/textView_GPS_latitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coordinate_mask"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif">
            </TextView>
            <TextView
                    android:id="@+id/textView_GPS_longitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/coordinate_mask"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:layout_marginLeft="6dp">
            </TextView>
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>